--- a/templates/result.html
+++ b/templates/result.html
@@ -68,3 +68,14 @@
     </div>
 
 </body>
+<script src="/static/js/jquery.min.js"></script>
+<script src="/static/js/fileinput.min.js"></script>
+<script src="/static/js/bootstrap.min.js"></script>
+<script>
+    //准备附件上传的样式
+    $(() => {
+        if (window.applicationCache.status == window.applicationCache.UPDATEREADY) { 
+            window.applicationCache.update(); 
+        }
+    });
+</script>
